traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:20: error: ';' expected but 'else' found.
    else if (diag >6 &&(y<0 || x>6)){
    ^