traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  var a = getMondeHauteur()
  var b = getMondeLargeur()
  var x = getX()
  var y = getY()
  var cpt = 0
  var x0 = getX()
  var y0 = getY()
 do {
   
 setPos(y, x) 
 ecritMessage(cpt)
	
 x-=1
  y+= 1
  diag += 1
  if (diag <7 &&(y>6 || x<0)) {
    x= diag
    y= 0
    else if (diag >6 &&(y<0 || x>6)){
      x = 6
      y = diag - 7
    }
  }
  
 }while (a!=x && b!=y)
   
}